--- a/css/style.css
+++ b/css/style.css
@@ -384,12 +384,16 @@ textarea.input {
 }
 
 #commitee ul {
+  font-size: 1.5em;
   list-style-type: none;
 }
 
-#commitee li {
-  margin: 7px auto;
-  font-size: 1.4em;
+#commitee ul ol {
+  font-size: 0.8em;
+}
+
+#commitee ul li {
+  margin: 15px auto;
 }
 
 #commitee a:hover {
