--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ textarea.input {
 .logo {
   position: relative;
   padding: 15px 15px;
-  font-size: 2em;
+  font-size: 38px;
 }
 
 .navbar-brand .logo>img {
@@ -384,12 +384,12 @@ textarea.input {
 }
 
 #commitee ul {
-  font-size: 1.5em;
+  font-size: 25px;
   list-style-type: none;
 }
 
 #commitee ul ul {
-  font-size: 0.8em;
+  font-size: 19px;
   list-style-type: circle;
 }
 
@@ -402,19 +402,19 @@ textarea.input {
 }
 
 #callForPapers h5,h4{
-  font-size: 1.4em;
+  font-size: 25px;
 }
 
 #callForPapers .impDates {
-  font-size: 1.3em;
+  font-size: 20px;
 }
 
 #callForPapers p{
-  font-size: 1.2em;
+  font-size: 20px;
 }
 
 #forums p {
-  font-size: 1.3em;
+  font-size: 21px;
 }
 
 /*=========================================================
@@ -898,7 +898,7 @@ textarea.input {
 }
 
 .contact p {
-  font-size: 1.2em;
+  font-size: 20px;
 }
 
 /*=========================================================
