--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
 	typography
 \*----------------------------*/
 
+.image{
+  width: auto;
+  height: auto;
+  max-width: 70%;
+  max-height: 70%;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
