Changed images max dimensions

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 .image{
   width: auto;
   height: auto;
-  max-width: 70%;
-  max-height: 70%;
+  max-width: 4.5vw;
+  max-height: 4.5vw;
 }
 
 body {
